# Photo-prestiges/contest-service/routes/contests.js
@@ -5,8 +5,10 @@ const router = express.Router();
 const User = require('../models/User');
 const Contest = require('../models/Contest');
 const amqp = require('amqplib');
+const mongoose = require("mongoose");
 const gatewayToken = process.env.GATEWAY_TOKEN;
 let channel = null;
+const ObjectId = mongoose.Types.ObjectId;
 
 async function connectToRabbitMQ() {
     try {
@@ -30,7 +32,7 @@ async function connectToRabbitMQ() {
 // Route voor het aanmaken van een nieuwe wedstrijd
 router.post('/create', verifyToken, async (req, res) => {
     try {
-        const { description, place, endTime } = req.body;
+        const { description, endTime } = req.body;
         let username = req.body.user
 
         let user = await User.findOne({ username });
@@ -38,14 +40,13 @@ router.post('/create', verifyToken, async (req, res) => {
             return res.status(400).json({ msg: 'Gebruiker bestaat niet' });
         }
 
-        if(user.role !== 'targetOwner') {
+        if (user.role !== 'targetOwner') {
             return res.status(401).json({msg: 'Je hebt niet de juiste rechten om een wedstrijd aan te maken'})
         }
 
         let contest = new Contest({
             owner: user,
             description,
-            place,
             endTime
         });
 
@@ -62,6 +63,49 @@ router.post('/create', verifyToken, async (req, res) => {
         }
 
         res.json({ msg: 'Contest succesvol geregistreerd' });
+    } catch (err) {
+        console.error(err.message);
+        res.status(500).send('Serverfout');
+    }
+});
+
+router.post('/update', verifyToken, async (req, res) => {
+    try {
+        const { id, place, image } = req.body;
+        let username = req.body.user
+
+        let user = await User.findOne({ username });
+        if (!user) {
+            return res.status(400).json({ msg: 'Gebruiker bestaat niet' });
+        }
+
+        if (user.role !== 'targetOwner') {
+            return res.status(401).json({msg: 'Je hebt niet de juiste rechten om een wedstrijd te updaten'})
+        }
+
+        let contest = await Contest.findById( new ObjectId(id) )
+        contest.place = place
+        contest.image = image
+
+        await contest.save();
+
+        if (channel) {
+            const exchangeName = 'contest_exchange';
+            const routingKey = 'contest.updated';
+            const message = JSON.stringify(user);
+            channel.publish(exchangeName, routingKey, Buffer.from(message), { persistent: true });
+            console.log('Contest updated message sent to RabbitMQ');
+        } else {
+            console.log('RabbitMQ channel is not available. Message not sent.');
+        }
+
+        const voorbeeldBase64String = "iVBORw0KGgoAAAANSUhEUgAAAAgAAAAKCAYAAACJxx+AAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAAZSURBVChTY/zPwABEuAETlMYJRhWAAAMDAJq9AhIp2UxgAAAAAElFTkSuQmCC"
+        res.contentType('image/png');
+        res.set('Content-Type', 'image/png');
+
+        res.send(Buffer.from(voorbeeldBase64String, 'base64'));
+
+        // res.json({ msg: 'Contest succesvol geupdate' });
     } catch (err) {
         console.error(err.message);
         res.status(500).send('Serverfout');
