# Photo-prestiges/gateway/app.js
@@ -12,9 +12,11 @@ app.use('/api-docs', swaggerUI.serve, swaggerUI.setup(swaggerDocument));
 
 app.use(cors())
 app.use(express.json());
+
 app.post('/register', registerRoute);
 app.post('/login', authRoute);
 app.post('/create-contest', contestRoute)
+app.post('/update-contest', contestRoute)
 
 app.listen(port, () => {
     console.log('Server is up on port ' + port)
